tests/tools/checker/negative/duplicate_function.nv
fn main() : void {
    return;
}

fn main() : void {
    return;
}
